--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@payloadcms/next": "^3.72.0",
     "@payloadcms/richtext-lexical": "^3.72.0",
     "@payloadcms/ui": "^3.72.0",
+    "framer-motion": "^12.27.5",
     "graphql": "^16.12.0",
     "next": "16.1.4",
+    "ogl": "^1.0.11",
     "payload": "^3.72.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -27,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "shadcn": "^3.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
