--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "payload": "^3.72.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-theme-switch-animation": "^1.0.0",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
