--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["./src/*"],
       "@payload-config": ["./payload.config.ts"]
     }
   },
