--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,13 @@ DATABASE_URL=postgresql://user:password@host:5432/database
 # Generate a secure secret: openssl rand -base64 32
 PAYLOAD_SECRET=your-secure-secret-here
 
-# Server URL (optional, for metadata generation)
+# Server URL (required for media URL generation)
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+# Supabase Storage (S3-compatible)
+# Get credentials from Supabase Dashboard > Project Settings > Storage
+S3_BUCKET=media
+S3_ACCESS_KEY_ID=your-access-key-id
+S3_SECRET_ACCESS_KEY=your-secret-access-key
+S3_REGION=your-region
+S3_ENDPOINT=https://your-project-ref.supabase.co/storage/v1/s3
