--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@payloadcms/db-postgres": "^3.74.0",
     "@payloadcms/next": "^3.74.0",
     "@payloadcms/richtext-lexical": "^3.74.0",
+    "@payloadcms/storage-s3": "^3.74.0",
     "@payloadcms/ui": "^3.74.0",
     "framer-motion": "^12.27.5",
     "graphql": "^16.12.0",
