--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "3.8.0",
     "shadcn": "^3.7.0",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
